DOC: use correct scales for Dalitz plot

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -690,21 +690,26 @@
    },
    "outputs": [],
    "source": [
+    "plt.rc(\"font\", size=18)\n",
     "resolution = 500\n",
     "X, Y = jnp.meshgrid(\n",
-    "    jnp.linspace(1.4, 1.93, num=resolution),\n",
-    "    jnp.linspace(1.65, 2.2, num=resolution),\n",
+    "    jnp.linspace(1.66**2, 2.18**2, num=resolution),\n",
+    "    jnp.linspace(1.4**2, 1.93**2, num=resolution),\n",
     ")\n",
     "data = {\n",
-    "    \"sigma2\": X**2,\n",
-    "    \"sigma3\": Y**2,\n",
+    "    \"sigma3\": X,\n",
+    "    \"sigma2\": Y,\n",
     "}\n",
     "intensities = func(data)\n",
+    "normalized_intensities = intensities / jnp.nansum(intensities)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(12, 10))\n",
-    "ax.pcolormesh(X, Y, intensities, norm=LogNorm())\n",
-    "ax.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
-    "ax.set_ylabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
+    "fig, ax = plt.subplots(figsize=(14, 10))\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities, norm=LogNorm())\n",
+    "ax.set_aspect(\"equal\")\n",
+    "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
+    "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
+    "ax.set_xlabel(R\"$M^2\\left(K^0\\Sigma^+\\right)$\")\n",
+    "ax.set_ylabel(R\"$M^2\\left(K^0\\bar{p}\\right)$\")\n",
     "plt.show()"
    ]
   }
