DOC: switch to linear scale

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -45,7 +45,6 @@
     "    make_commutative,\n",
     ")\n",
     "from IPython.display import Latex, Markdown\n",
-    "from matplotlib.colors import LogNorm\n",
     "from tensorwaves.function.sympy import create_function\n",
     "\n",
     "from ampform_dpd import (\n",
@@ -704,7 +703,7 @@
     "normalized_intensities = intensities / jnp.nansum(intensities)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
-    "mesh = ax.pcolormesh(X, Y, normalized_intensities, norm=LogNorm())\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
