--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -680,6 +680,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%config InlineBackend.figure_formats = ['png']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "jupyter": {
      "source_hidden": true
     },
@@ -709,6 +722,45 @@
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
     "ax.set_xlabel(R\"$M^2\\left(K^0\\Sigma^+\\right)$\")\n",
     "ax.set_ylabel(R\"$M^2\\left(K^0\\bar{p}\\right)$\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%config InlineBackend.figure_formats = ['svg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "plt.rc(\"font\", size=16)\n",
+    "fig, axes = plt.subplots(figsize=(18, 6), ncols=2, sharey=True)\n",
+    "fig.subplots_adjust(wspace=0.02)\n",
+    "ax1, ax2 = axes\n",
+    "ax1.fill_between(jnp.sqrt(X[0]), jnp.nansum(normalized_intensities, axis=0))\n",
+    "ax2.fill_between(jnp.sqrt(Y[:, 0]), jnp.nansum(normalized_intensities, axis=1))\n",
+    "ax1.set_ylabel(\"Normalized intensity (a.u.)\")\n",
+    "ax1.set_xlabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
+    "ax2.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
     "plt.show()"
    ]
   }
