MAINT: only hide caching warnings in Sphinx build

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "import itertools\n",
     "import logging\n",
+    "import os\n",
     "from typing import Iterable\n",
     "\n",
     "import jax.numpy as jnp\n",
@@ -62,8 +63,10 @@
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
-    "logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
-    "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX"
+    "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
+    "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
+    "if NO_TQDM:\n",
+    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
   {
