DOC: illustrate Dalitz variable conversion

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -46,6 +46,7 @@
     "    make_commutative,\n",
     ")\n",
     "from IPython.display import Latex, Markdown\n",
+    "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tensorwaves.function.sympy import create_function\n",
     "\n",
     "from ampform_dpd import (\n",
@@ -588,6 +589,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Preparing for input data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The {meth}`~sympy.core.basic.Basic.doit` operation can be cached to disk with {func}`.perform_cached_doit`. We do this twice, once for the unfolding of the {attr}`~.AmplitudeModel.intensity` expression and second for the substitution and unfolding of the {attr}`~.AmplitudeModel.amplitudes`. Note that we could also have unfolded the intensity and substituted the amplitudes with {attr}`~.AmplitudeModel.full_expression`, but then the unfolded {attr}`~.AmplitudeModel.intensity` expression is not cached."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
+    "full_intensity_expr = perform_cached_doit(\n",
+    "    unfolded_intensity_expr.xreplace(model.amplitudes)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set each helicity coupling to $1$, so that each each parameter {class}`~sympy.core.symbol.Symbol` in the expression has a definition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "couplings = {\n",
+    "    s: 1\n",
+    "    for s in full_intensity_expr.free_symbols\n",
+    "    if \"production\" in str(s) or \"decay\" in str(s)\n",
+    "}\n",
+    "model.parameter_defaults.update(couplings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "sp.Array(full_intensity_expr.free_symbols - set(model.parameter_defaults))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The $\\theta$ and $\\zeta$ angles are defined by the {attr}`~.AmplitudeModel.variables` attribute (they are shown under {ref}`jpsi2ksp:Model formulation`). Those definitions allow us to create a converter that computes kinematic variables from masses and Mandelstam variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "masses_to_angles = SympyDataTransformer.from_sympy(model.variables, backend=\"jax\")\n",
+    "masses_to_angles.functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dalitz plot"
    ]
   },
@@ -595,7 +687,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We set each helicity coupling to $1$, so that each each parameter value has a definition:"
+    "The data input for this data transformer can be several things. One can compute them from a (generated) data sample of four-momenta. Or one can compute them for a Dalitz plane. We do the latter in this section.\n",
+    "\n",
+    "First, the data transformer defined above expects values for the masses. We have already defined these values above, but we need to convert them from {mod}`sympy` objects to numerical data:"
    ]
   },
   {
@@ -604,32 +698,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_expression = perform_cached_doit(model.full_expression)\n",
-    "couplings = {\n",
-    "    s: 1\n",
-    "    for s in full_expression.free_symbols\n",
-    "    if \"production\" in str(s) or \"decay\" in str(s)\n",
-    "}\n",
-    "model.parameter_defaults.update(couplings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subs_expression = perform_cached_doit(\n",
-    "    full_expression.xreplace(model.variables)\n",
-    ").xreplace(model.parameter_defaults)\n",
-    "subs_expression.free_symbols"
+    "dalitz_data = {str(s): float(v) for s, v in masses.items()}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The remaining symbols in the expressions are three Mandelstam variables and initial and final state masses. The masses we know, and one of the Mandelstam variables can be expressed in terms of the others as follows:"
+    "Next, we define a grid of data points over Mandelstam (Dalitz) variables $\\sigma_2=m_{13}, \\sigma_3=m_{12}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resolution = 500\n",
+    "X, Y = jnp.meshgrid(\n",
+    "    jnp.linspace(1.66**2, 2.18**2, num=resolution),\n",
+    "    jnp.linspace(1.4**2, 1.93**2, num=resolution),\n",
+    ")\n",
+    "dalitz_data[\"sigma3\"] = X\n",
+    "dalitz_data[\"sigma2\"] = Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The remaining Mandelstam variable can be expressed in terms of the others as follows:"
    ]
   },
   {
@@ -655,7 +753,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this, we have a single expression for the intensity that only depends on Mandelstam (Dalitz) variables $\\sigma_2=m_{13}, \\sigma_3=m_{12}$:"
+    "That completes the data sample over which we want to evaluate the intensity model defined above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "sigma1_func = create_function(s1_expr, backend=\"jax\")\n",
+    "dalitz_data[\"sigma1\"] = sigma1_func(dalitz_data)\n",
+    "dalitz_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now extend the sample with angle definitions so that we have a data sample over which the intensity can be evaluated."
    ]
   },
   {
@@ -664,10 +784,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dalitz_expression = perform_cached_doit(\n",
-    "    subs_expression.xreplace({s1: s1_expr}).xreplace(masses)\n",
-    ")\n",
-    "dalitz_expression.free_symbols"
+    "angle_data = masses_to_angles(dalitz_data)\n",
+    "dalitz_data.update(angle_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "for k, v in dalitz_data.items():\n",
+    "    assert not jnp.all(jnp.isnan(v)), f\"All values for {k} are NaN\""
    ]
   },
   {
@@ -676,7 +808,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "func = create_function(dalitz_expression, backend=\"jax\")"
+    "intensity_func = create_function(\n",
+    "    full_intensity_expr.xreplace(model.parameter_defaults),\n",
+    "    backend=\"jax\",\n",
+    ")"
    ]
   },
   {
@@ -706,16 +841,7 @@
    "outputs": [],
    "source": [
     "plt.rc(\"font\", size=18)\n",
-    "resolution = 500\n",
-    "X, Y = jnp.meshgrid(\n",
-    "    jnp.linspace(1.66**2, 2.18**2, num=resolution),\n",
-    "    jnp.linspace(1.4**2, 1.93**2, num=resolution),\n",
-    ")\n",
-    "data = {\n",
-    "    \"sigma3\": X,\n",
-    "    \"sigma2\": Y,\n",
-    "}\n",
-    "intensities = func(data)\n",
+    "intensities = intensity_func(dalitz_data)\n",
     "normalized_intensities = intensities / jnp.nansum(intensities)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
