DOC: indicate resonance lines

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -876,7 +876,8 @@
     },
     "tags": [
      "hide-input",
-     "full-width"
+     "full-width",
+     "scroll-input"
     ]
    },
    "outputs": [],
@@ -887,9 +888,30 @@
     "ax1, ax2 = axes\n",
     "ax1.fill_between(jnp.sqrt(X[0]), jnp.nansum(normalized_intensities, axis=0))\n",
     "ax2.fill_between(jnp.sqrt(Y[:, 0]), jnp.nansum(normalized_intensities, axis=1))\n",
+    "for ax in axes:\n",
+    "    _, y_max = ax.get_ylim()\n",
+    "    ax.set_ylim(0, y_max)\n",
+    "    ax.autoscale(enable=False, axis=\"x\")\n",
     "ax1.set_ylabel(\"Normalized intensity (a.u.)\")\n",
     "ax1.set_xlabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
     "ax2.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
+    "i1, i2 = 0, 0\n",
+    "for chain in model.decay.chains:\n",
+    "    resonance = chain.resonance\n",
+    "    decay_product = set(chain.decay_products)\n",
+    "    if decay_product == {K, Σ}:\n",
+    "        ax = ax1\n",
+    "        i1 += 1\n",
+    "        i = i1\n",
+    "    elif decay_product == {K, pbar}:\n",
+    "        ax = ax2\n",
+    "        i2 += 1\n",
+    "        i = i2\n",
+    "    else:\n",
+    "        continue\n",
+    "    ax.axvline(resonance.mass, label=f\"${resonance.latex}$\", c=f\"C{i}\", ls=\"dashed\")\n",
+    "for ax in axes:\n",
+    "    ax.legend(fontsize=12)\n",
     "plt.show()"
    ]
   }
