DOC: add sigma labels to Dalitz plotaxes

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -849,8 +849,8 @@
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
-    "ax.set_xlabel(R\"$M^2\\left(K^0\\Sigma^+\\right)$\")\n",
-    "ax.set_ylabel(R\"$M^2\\left(K^0\\bar{p}\\right)$\")\n",
+    "ax.set_xlabel(R\"$\\sigma_3 = M^2\\left(K^0\\Sigma^+\\right)$\")\n",
+    "ax.set_ylabel(R\"$\\sigma_2 = M^2\\left(K^0\\bar{p}\\right)$\")\n",
     "plt.show()"
    ]
   },
