--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We follow [this example](https://qrules.readthedocs.io/en/0.9.7/usage.html#investigate-intermediate-resonances), which was generated with QRules, and leave out the $K$-resonances:\n",
+    "We follow [this example](https://qrules.readthedocs.io/en/0.9.7/usage.html#investigate-intermediate-resonances), which was generated with QRules, and leave out the $K$-resonances and the resonances that lie far outside of phase space:\n",
     "\n",
     "![](https://qrules.readthedocs.io/en/0.9.7/_images/usage_9_0.svg)\n",
     "\n",
@@ -138,16 +138,11 @@
    "outputs": [],
    "source": [
     "resonance_names = [\n",
-    "    \"Sigma(1385)~-\",\n",
     "    \"Sigma(1660)~-\",\n",
     "    \"Sigma(1670)~-\",\n",
     "    \"Sigma(1750)~-\",\n",
     "    \"Sigma(1775)~-\",\n",
     "    \"Sigma(1910)~-\",\n",
-    "    \"N(1440)+\",\n",
-    "    \"N(1520)+\",\n",
-    "    \"N(1535)+\",\n",
-    "    \"N(1650)+\",\n",
     "    \"N(1675)+\",\n",
     "    \"N(1700)+\",\n",
     "    \"N(1710)+\",\n",
