MAINT: parametrize J/ψ → K⁰Σ⁺ intensity function

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -47,7 +47,7 @@
     ")\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
-    "from tensorwaves.function.sympy import create_function\n",
+    "from tensorwaves.function.sympy import create_function, create_parametrized_function\n",
     "\n",
     "from ampform_dpd import (\n",
     "    DalitzPlotDecompositionBuilder,\n",
@@ -803,8 +803,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intensity_func = create_function(\n",
-    "    full_intensity_expr.xreplace(model.parameter_defaults),\n",
+    "intensity_func = create_parametrized_function(\n",
+    "    full_intensity_expr,\n",
+    "    parameters=model.parameter_defaults,\n",
     "    backend=\"jax\",\n",
     ")"
    ]
