FIX: remove `Indexed` bases from `parameter_defaults`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -622,6 +622,7 @@
     "couplings = {\n",
     "    s: 1\n",
     "    for s in full_intensity_expr.free_symbols\n",
+    "    if isinstance(s, sp.Indexed)\n",
     "    if \"production\" in str(s) or \"decay\" in str(s)\n",
     "}\n",
     "model.parameter_defaults.update(couplings)"
@@ -631,7 +632,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables."
+    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables.[^1]\n",
+    "\n",
+    "[^1]: Yes, there are still $\\mathcal{H}^\\mathrm{production}$ and $\\mathcal{H}^\\mathrm{decay}$, but these are the {attr}`~sympy.tensor.indexed.Indexed.base`s of the {class}`~sympy.tensor.indexed.Indexed` coupling symbols. They should **NOT** be substituted."
    ]
   },
   {
