MAINT: make only couplings free parameters

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -806,9 +806,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "free_parameters = {\n",
+    "    k: v\n",
+    "    for k, v in model.parameter_defaults.items()\n",
+    "    if isinstance(k, sp.Indexed)\n",
+    "    if \"production\" in str(k) or \"decay\" in str(k)\n",
+    "}\n",
+    "fixed_parameters = {\n",
+    "    k: v for k, v in model.parameter_defaults.items() if k not in free_parameters\n",
+    "}\n",
     "intensity_func = create_parametrized_function(\n",
-    "    full_intensity_expr,\n",
-    "    parameters=model.parameter_defaults,\n",
+    "    full_intensity_expr.xreplace(fixed_parameters),\n",
+    "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
     ")"
    ]
