DOC: indicate sub-intensities

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -48,6 +48,8 @@
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tensorwaves.function.sympy import create_function, create_parametrized_function\n",
+    "from tensorwaves.interface import DataSample, ParametrizedFunction\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import (\n",
     "    DalitzPlotDecompositionBuilder,\n",
@@ -850,7 +852,8 @@
    "source": [
     "plt.rc(\"font\", size=18)\n",
     "intensities = intensity_func(dalitz_data)\n",
-    "normalized_intensities = intensities / jnp.nansum(intensities)\n",
+    "I_tot = jnp.nansum(intensities)\n",
+    "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
     "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
@@ -890,12 +893,30 @@
    },
    "outputs": [],
    "source": [
+    "def compute_sub_intensity(\n",
+    "    func: ParametrizedFunction, phsp: DataSample, resonance_latex: str\n",
+    ") -> jnp.ndarray:\n",
+    "    original_parameters = dict(func.parameters)\n",
+    "    zero_parameters = {\n",
+    "        k: 0\n",
+    "        for k, v in func.parameters.items()\n",
+    "        if R\"\\mathcal{H}\" in k\n",
+    "        if resonance_latex not in k\n",
+    "    }\n",
+    "    func.update_parameters(zero_parameters)\n",
+    "    intensities = func(phsp)\n",
+    "    func.update_parameters(original_parameters)\n",
+    "    return intensities\n",
+    "\n",
+    "\n",
     "plt.rc(\"font\", size=16)\n",
     "fig, axes = plt.subplots(figsize=(18, 6), ncols=2, sharey=True)\n",
     "fig.subplots_adjust(wspace=0.02)\n",
     "ax1, ax2 = axes\n",
-    "ax1.fill_between(jnp.sqrt(X[0]), jnp.nansum(normalized_intensities, axis=0))\n",
-    "ax2.fill_between(jnp.sqrt(Y[:, 0]), jnp.nansum(normalized_intensities, axis=1))\n",
+    "x = jnp.sqrt(X[0])\n",
+    "y = jnp.sqrt(Y[:, 0])\n",
+    "ax1.fill_between(x, jnp.nansum(normalized_intensities, axis=0), alpha=0.5)\n",
+    "ax2.fill_between(y, jnp.nansum(normalized_intensities, axis=1), alpha=0.5)\n",
     "for ax in axes:\n",
     "    _, y_max = ax.get_ylim()\n",
     "    ax.set_ylim(0, y_max)\n",
@@ -904,19 +925,29 @@
     "ax1.set_xlabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
     "ax2.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
     "i1, i2 = 0, 0\n",
-    "for chain in model.decay.chains:\n",
+    "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
     "    resonance = chain.resonance\n",
     "    decay_product = set(chain.decay_products)\n",
     "    if decay_product == {K, Σ}:\n",
     "        ax = ax1\n",
     "        i1 += 1\n",
     "        i = i1\n",
+    "        projection_axis = 0\n",
+    "        x_data = x\n",
     "    elif decay_product == {K, pbar}:\n",
     "        ax = ax2\n",
     "        i2 += 1\n",
     "        i = i2\n",
+    "        projection_axis = 1\n",
+    "        x_data = y\n",
     "    else:\n",
     "        continue\n",
+    "    sub_intensities = compute_sub_intensity(\n",
+    "        intensity_func, dalitz_data, resonance.latex\n",
+    "    )\n",
+    "    ax.plot(\n",
+    "        x_data, jnp.nansum(sub_intensities / I_tot, axis=projection_axis), c=f\"C{i}\"\n",
+    "    )\n",
     "    ax.axvline(resonance.mass, label=f\"${resonance.latex}$\", c=f\"C{i}\", ls=\"dashed\")\n",
     "for ax in axes:\n",
     "    ax.legend(fontsize=12)\n",
