DOC: plot J/ψ → K⁰Σ⁺p̅ sub-contributions (#19)
* FIX: remove `Indexed` bases from `parameter_defaults`
* MAINT: make only couplings free parameters
* MAINT: parametrize J/ψ → K⁰Σ⁺ intensity function

Co-authored-by: GitHub <noreply@github.com>

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -47,7 +47,9 @@
     ")\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
-    "from tensorwaves.function.sympy import create_function\n",
+    "from tensorwaves.function.sympy import create_function, create_parametrized_function\n",
+    "from tensorwaves.interface import DataSample, ParametrizedFunction\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import (\n",
     "    DalitzPlotDecompositionBuilder,\n",
@@ -622,6 +624,7 @@
     "couplings = {\n",
     "    s: 1\n",
     "    for s in full_intensity_expr.free_symbols\n",
+    "    if isinstance(s, sp.Indexed)\n",
     "    if \"production\" in str(s) or \"decay\" in str(s)\n",
     "}\n",
     "model.parameter_defaults.update(couplings)"
@@ -631,7 +634,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables."
+    "With this, the remaining {class}`~sympy.core.symbol.Symbol`s in the full expression are kinematic variables.[^1]\n",
+    "\n",
+    "[^1]: Yes, there are still $\\mathcal{H}^\\mathrm{production}$ and $\\mathcal{H}^\\mathrm{decay}$, but these are the {attr}`~sympy.tensor.indexed.Indexed.base`s of the {class}`~sympy.tensor.indexed.Indexed` coupling symbols. They should **NOT** be substituted."
    ]
   },
   {
@@ -803,8 +808,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intensity_func = create_function(\n",
-    "    full_intensity_expr.xreplace(model.parameter_defaults),\n",
+    "free_parameters = {\n",
+    "    k: v\n",
+    "    for k, v in model.parameter_defaults.items()\n",
+    "    if isinstance(k, sp.Indexed)\n",
+    "    if \"production\" in str(k) or \"decay\" in str(k)\n",
+    "}\n",
+    "fixed_parameters = {\n",
+    "    k: v for k, v in model.parameter_defaults.items() if k not in free_parameters\n",
+    "}\n",
+    "intensity_func = create_parametrized_function(\n",
+    "    full_intensity_expr.xreplace(fixed_parameters),\n",
+    "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
     ")"
    ]
@@ -837,7 +852,8 @@
    "source": [
     "plt.rc(\"font\", size=18)\n",
     "intensities = intensity_func(dalitz_data)\n",
-    "normalized_intensities = intensities / jnp.nansum(intensities)\n",
+    "I_tot = jnp.nansum(intensities)\n",
+    "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
     "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
@@ -877,12 +893,30 @@
    },
    "outputs": [],
    "source": [
+    "def compute_sub_intensity(\n",
+    "    func: ParametrizedFunction, phsp: DataSample, resonance_latex: str\n",
+    ") -> jnp.ndarray:\n",
+    "    original_parameters = dict(func.parameters)\n",
+    "    zero_parameters = {\n",
+    "        k: 0\n",
+    "        for k, v in func.parameters.items()\n",
+    "        if R\"\\mathcal{H}\" in k\n",
+    "        if resonance_latex not in k\n",
+    "    }\n",
+    "    func.update_parameters(zero_parameters)\n",
+    "    intensities = func(phsp)\n",
+    "    func.update_parameters(original_parameters)\n",
+    "    return intensities\n",
+    "\n",
+    "\n",
     "plt.rc(\"font\", size=16)\n",
     "fig, axes = plt.subplots(figsize=(18, 6), ncols=2, sharey=True)\n",
     "fig.subplots_adjust(wspace=0.02)\n",
     "ax1, ax2 = axes\n",
-    "ax1.fill_between(jnp.sqrt(X[0]), jnp.nansum(normalized_intensities, axis=0))\n",
-    "ax2.fill_between(jnp.sqrt(Y[:, 0]), jnp.nansum(normalized_intensities, axis=1))\n",
+    "x = jnp.sqrt(X[0])\n",
+    "y = jnp.sqrt(Y[:, 0])\n",
+    "ax1.fill_between(x, jnp.nansum(normalized_intensities, axis=0), alpha=0.5)\n",
+    "ax2.fill_between(y, jnp.nansum(normalized_intensities, axis=1), alpha=0.5)\n",
     "for ax in axes:\n",
     "    _, y_max = ax.get_ylim()\n",
     "    ax.set_ylim(0, y_max)\n",
@@ -891,19 +925,29 @@
     "ax1.set_xlabel(R\"$M\\left(K^0\\Sigma^+\\right)$\")\n",
     "ax2.set_xlabel(R\"$M\\left(K^0\\bar{p}\\right)$\")\n",
     "i1, i2 = 0, 0\n",
-    "for chain in model.decay.chains:\n",
+    "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
     "    resonance = chain.resonance\n",
     "    decay_product = set(chain.decay_products)\n",
     "    if decay_product == {K, Σ}:\n",
     "        ax = ax1\n",
     "        i1 += 1\n",
     "        i = i1\n",
+    "        projection_axis = 0\n",
+    "        x_data = x\n",
     "    elif decay_product == {K, pbar}:\n",
     "        ax = ax2\n",
     "        i2 += 1\n",
     "        i = i2\n",
+    "        projection_axis = 1\n",
+    "        x_data = y\n",
     "    else:\n",
     "        continue\n",
+    "    sub_intensities = compute_sub_intensity(\n",
+    "        intensity_func, dalitz_data, resonance.latex\n",
+    "    )\n",
+    "    ax.plot(\n",
+    "        x_data, jnp.nansum(sub_intensities / I_tot, axis=projection_axis), c=f\"C{i}\"\n",
+    "    )\n",
     "    ax.axvline(resonance.mass, label=f\"${resonance.latex}$\", c=f\"C{i}\", ls=\"dashed\")\n",
     "for ax in axes:\n",
     "    ax.legend(fontsize=12)\n",
