FEAT: implement `perform_cached_lambdify()`

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -45,7 +45,6 @@
     ")\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
-    "from tensorwaves.function.sympy import create_function, create_parametrized_function\n",
     "from tensorwaves.interface import DataSample, ParametrizedFunction\n",
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -60,7 +59,12 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_doit\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    perform_cached_doit,\n",
+    "    perform_cached_lambdify,\n",
+    ")\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
@@ -764,7 +768,7 @@
    },
    "outputs": [],
    "source": [
-    "sigma1_func = create_function(s1_expr, backend=\"jax\")\n",
+    "sigma1_func = perform_cached_lambdify(s1_expr, backend=\"jax\")\n",
     "dalitz_data[\"sigma1\"] = sigma1_func(dalitz_data)\n",
     "dalitz_data"
    ]
@@ -815,7 +819,7 @@
     "fixed_parameters = {\n",
     "    k: v for k, v in model.parameter_defaults.items() if k not in free_parameters\n",
     "}\n",
-    "intensity_func = create_parametrized_function(\n",
+    "intensity_func = perform_cached_lambdify(\n",
     "    full_intensity_expr.xreplace(fixed_parameters),\n",
     "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
