--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -42,6 +42,7 @@
     "    create_expression,\n",
     "    implement_doit_method,\n",
     "    make_commutative,\n",
+    "    perform_cached_doit,\n",
     ")\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
@@ -59,12 +60,7 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    perform_cached_doit,\n",
-    "    perform_cached_lambdify,\n",
-    ")\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
