ENH: assert that not all intensities are NaN

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -852,6 +852,7 @@
     "intensities = intensity_func(dalitz_data)\n",
     "I_tot = jnp.nansum(intensities)\n",
     "normalized_intensities = intensities / I_tot\n",
+    "assert not jnp.all(jnp.isnan(normalized_intensities)), \"All intensities are NaN\"\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
     "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
