MAINT: use `ampform.sympy.perform_cached_doit()` (#25)
* BREAK: deprecate `perform_cached_doit` over AmpForm
* DOC: remove sub-threshold resonance N(1675)⁺
* ENH: assert that not all intensities are NaN
* MAINT: set minimal AmpForm version to v0.14.4
* MAINT: update pip constraints and pre-commit config

Co-authored-by: GitHub <noreply@github.com>

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -42,6 +42,7 @@
     "    create_expression,\n",
     "    implement_doit_method,\n",
     "    make_commutative,\n",
+    "    perform_cached_doit,\n",
     ")\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
@@ -59,12 +60,7 @@
     "    ThreeBodyDecay,\n",
     "    ThreeBodyDecayChain,\n",
     ")\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    perform_cached_doit,\n",
-    "    perform_cached_lambdify,\n",
-    ")\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, perform_cached_lambdify\n",
     "from ampform_dpd.spin import filter_parity_violating_ls, generate_ls_couplings\n",
     "\n",
     "simplify_latex_rendering()\n",
@@ -147,7 +143,6 @@
     "    \"Sigma(1750)~-\",\n",
     "    \"Sigma(1775)~-\",\n",
     "    \"Sigma(1910)~-\",\n",
-    "    \"N(1675)+\",\n",
     "    \"N(1700)+\",\n",
     "    \"N(1710)+\",\n",
     "    \"N(1720)+\",\n",
@@ -856,6 +851,7 @@
     "intensities = intensity_func(dalitz_data)\n",
     "I_tot = jnp.nansum(intensities)\n",
     "normalized_intensities = intensities / I_tot\n",
+    "assert not jnp.all(jnp.isnan(normalized_intensities)), \"All intensities are NaN\"\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
     "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
