--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -499,7 +499,9 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
+    "model_builder = DalitzPlotDecompositionBuilder(\n",
+    "    DECAY, use_helicity_couplings=(False, True)\n",
+    ")\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_ff\n",
