--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -336,7 +336,9 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
+    "model_builder = DalitzPlotDecompositionBuilder(\n",
+    "    DECAY, use_helicity_couplings=(False, True)\n",
+    ")\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(chain, formulate_breit_wigner)\n",
     "model = model_builder.formulate(reference_subsystem=1)\n",
