BREAK: use only LS-couplings in J/psi model

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -499,9 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = DalitzPlotDecompositionBuilder(\n",
-    "    DECAY, use_helicity_couplings=(False, True)\n",
-    ")\n",
+    "model_builder = DalitzPlotDecompositionBuilder(DECAY, use_helicity_couplings=False)\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_ff\n",
