MAINT: rename `use_helicity_couplings` back to `min_ls`
This is to maintain back-ward compatability with v0.1, so that v0.2 can introduce larger changes to the decay class structure

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = DalitzPlotDecompositionBuilder(DECAY, use_helicity_couplings=False)\n",
+    "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=False)\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_ff\n",
