FEAT: add option to use decay LS-couplings (#32)
* BEHAVIOR: do not evaluate sqrt normalization factor
* DOC: use only LS-couplings in J/psi model
* FIX: insert correct final state spins in Clebsch-Gordan
* MAINT: define spin as `tuple`
  This is better for typing in case of unpacking the tuple
* MAINT: move `parameter_defaults` assignment one level up
  This is better for the diff when removing the Kronecker delta skip
* MAINT: remove redundant LS is not `None` check
* MAINT: rename CG function to plural
* MAINT: upgrade Jupyter Python kernels

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
+    "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=False)\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(\n",
     "        chain, formulate_breit_wigner_with_ff\n",
@@ -969,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
