FIX: simplify factors

--- a/docs/collect-wigners.ipynb
+++ b/docs/collect-wigners.ipynb
@@ -315,9 +315,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "mystnb": {
      "code_prompt_show": "Collect Wigner-D functions"
     },
@@ -333,7 +330,7 @@
     "\"\"\"\n",
     "for x in dynamic_symbols:\n",
     "    filter_substitutions = {s: 1 if s == x else 0 for s in dynamic_symbols}\n",
-    "    factor = full_expression.xreplace(filter_substitutions)\n",
+    "    factor = full_expression.xreplace(filter_substitutions).simplify()\n",
     "    src += Rf\"{sp.latex(x)} &:& {sp.latex(factor)} \\\\\" \"\\n\"\n",
     "src += R\"\\end{eqnarray}\"\n",
     "Latex(src)"
