DOC: abbreviate references with _et al._

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -16,15 +16,18 @@
 }
 
 @article{JPAC:2021rxu,
-  title = {Novel Approaches in {{Hadron Spectroscopy}}},
-  author = {JPAC Collaboration and Albaladejo, Miguel and Bibrzycki, Lukasz and Dawid, Sebastian M. and {Fernandez-Ramirez}, Cesar and {Gonzalez-Solis}, Sergi and Blin, Astrid N. Hiller and Jackura, Andrew W. and Mathieu, Vincent and Mikhasenko, Mikhail and Mokeev, Victor I. and Passemar, Emilie and Pilloni, Alessandro and Rodas, Arkaitz and {Silva-Castro}, Jorge A. and Smith, Wyatt A. and Szczepaniak, Adam P. and Winney, Daniel},
-  year = {2021},
-  month = dec,
-  journal = {arXiv:2112.13436 [hep-ex, physics:hep-ph, physics:nucl-th]},
+  title = {Novel Approaches in Hadron Spectroscopy},
+  author = {{JPAC Collaboration} and Albaladejo, Miguel and Bibrzycki, Lukasz and Dawid, Sebastian M. and {Fernandez-Ramirez}, Cesar and {Gonzalez-Solis}, Sergi and Blin, Astrid N. Hiller and Jackura, Andrew W. and Mathieu, Vincent and Mikhasenko, Mikhail and Mokeev, Victor I. and Passemar, Emilie and Pilloni, Alessandro and Rodas, Arkaitz and {Silva-Castro}, Jorge A. and Smith, Wyatt A. and Szczepaniak, Adam P. and Winney, Daniel},
+  year = {2022},
+  month = nov,
+  journal = {Progress in Particle and Nuclear Physics},
+  volume = {127},
   eprint = {2112.13436},
   eprinttype = {arxiv},
-  primaryclass = {hep-ex, physics:hep-ph, physics:nucl-th},
+  pages = {103981},
+  issn = {01466410},
   doi = {10.1016/j.ppnp.2022.103981},
   url = {http://arxiv.org/abs/2112.13436},
-  archiveprefix = {arXiv}
+  archiveprefix = {arXiv},
+  collaboration = {JPAC collaboration}
 }
