FIX: match final state order

--- a/docs/d2kkk.ipynb
+++ b/docs/d2kkk.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "reaction = qrules.generate_transitions(\n",
     "    initial_state=\"D0\",\n",
-    "    final_state=[\"K0\", \"K-\", \"K+\"],\n",
+    "    final_state=[p.name for p in FINAL_STATE],\n",
     "    allowed_intermediate_particles=[\"a(0)\", \"f(0)\", \"K*\"],\n",
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
